<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/accounts_title"
        android:textSize="20sp" android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/accountList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button android:id="@+id/addAccountButton" style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
            android:text="@string/add_account" />
        <Button android:id="@+id/settingsButton" style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
            android:text="@string/settings" />
    </LinearLayout>
</LinearLayout>
